Fix obstacle overflow

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     margin: 0 auto;
     border: 1px solid black;
     position: absolute;
-
+    overflow-x: hidden;
 }
 
 
